<resources>
    <string name="app_name">AC02 Countries of the world</string>
    <string name="name">Name:</string>
    <string name="continent">Continent:</string>
    <string name="capital">Capital:</string>
    <string name="phone_code">Phone Code:</string>
    <string name="code2">Code 2:</string>
    <string name="code3">Code 3:</string>
    <string name="tld">Web domain:</string>
    <string name="km">Square kilometers:</string>
    <string name="emoji">Emote:</string>
    <string name="favorite">Favorite</string>
    <string name="country">Country</string>
    <string name="order">Order</string>
    <string name="africa">Africa</string>
    <string name="europe">Europe</string>
    <string name="oceania">Oceania</string>
    <string name="n_america">North America</string>
    <string name="antarctica">Antarctica</string>
    <string name="s_america">South America</string>
    <string name="none">None</string>
    <string name="filter_up">Upward</string>
    <string name="filter_down">Falling</string>
    <string name="filter_favorite">Favorite</string>
    <string name="filter_no_favorite">Not favorite</string>
</resources>